# navitia-poi-model

./: Cargo.toml  README.md
src/: io.rs  lib.rs  objects.rs
